# PWA-pages

./: .cspell.json  .editorconfig  .flake8  .gitattributes  .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .pylintrc  .readthedocs.yml  .rstcheck.cfg  .travis.yml  CONTRIBUTING.md  Makefile  README.md  README.rst  codecov.yml  conf.py  cspell.json  environment.yml  index.rst  labels.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.constraints/: py3.10.txt  py3.11.txt  py3.12.txt  py3.6.txt  py3.7.txt  py3.8.txt  py3.9.txt
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: cd.yml  ci-docs.yml  ci-epic.yml  ci-style.yml  ci-tests.yml  ci.yml  linkcheck.yml  pr-linting.yml  requirements-cron.yml  requirements-pr.yml  requirements.yml
.reqs/: dev.in  doc.in  doc.txt  sty.in  sty.txt
adr/: 0000-write-introduction-to-pwa-theory.md  0000-write-overview-of-pwa-theory.md  index.rst
doc/: conf.py
doc/software/: git.rst  python.rst
doc/software/git/: remotes.rst
doc/theory/: data.rst  dynamics.ipynb  formalisms.rst  glossary.rst  topics.rst
docs/: .gitignore  _quarto.yml  about.md  analysis.md  api.rst  bibliography-Software.bib  bibliography-Theory.bib  bibliography.bib  conf.py  data.md  develop.md  develop.rst  dynamics.ipynb  formalisms.md  glossary.md  glossary.yml  ieee.csl  index.md  index.qmd  introduction.ipynb  references.md  references.qmd  software.ipynb  software.md  theory.md  topics.md
docs/_extensions/debruine/glossary/: glossary.css
docs/_static/: custom.css
docs/analysis/: _metadata.yml  fit.md  fit.qmd  index.qmd  statistics.md  statistics.qmd  visualization.md  visualization.qmd
docs/formalisms/: helicity.md  tensor.md
docs/git/: branching.md  remotes.md
docs/note/: example.qmd  index.qmd
docs/physics/: _metadata.yml  data.qmd  dynamics.qmd  index.qmd
docs/physics/formalisms/: helicity.qmd  index.qmd  tensor.qmd
docs/physics/topics/: cqm.qmd  index.qmd  results.qmd  sm.qmd
docs/software/: .gitignore  amplitude-analysis-projects.yml  bibliography.bib  documentation.md  fitter-packages.yml  framework-inventory.yml  git.md  index.qmd  project-inventory-schema.json  python.md  references.md  testing.md  tips.md  z.references.md  z.references.rst
docs/software/git/: branching.md  branching.rst  commit.md  github.md  remotes.md
docs/theory/: dynamics.ipynb  formalisms.md  glossary.md  glossary.rst  introduction.ipynb  introduction.md  kmatrix.ipynb  references.md  results.md  topics.md  z.references.md  z.references.rst
docs/theory/formalisms/: helicity.md  tensor.md
docs/theory/topics/: cqm.md  sm.md
docs/topics/: cqm.md  results.md  sm.md
reqs/: requirements-dev.in  requirements-doc.in  requirements-sty.in
reqs/3.6/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
reqs/3.7/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
reqs/3.8/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
reqs/3.9/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
software/: documentation.rst  index.rst  python.rst  tips.rst
software/git/: branching.rst  github.rst  remotes.rst
src/: analysis.rst  conf.py  index.rst  software.rst  theory.rst
src/analysis/: fit.rst  statistics.rst  visualization.rst
src/pwa_pages/: __init__.py  github.py  project_inventory.py  repo.py
src/pwa_pages/repo/: __init__.py  _github.py  _gitlab.py
src/software/: documentation.rst  git.rst  python.rst  testing.rst  tips.rst
src/software/git/: branching.rst  commit.rst  github.rst
src/theory/: bibliography.bib  data.rst  dynamics.ipynb  dynamics.rst  formalisms.inc  formalisms.rst  glossary.rst  index.rst  interactions.rst  introduction.rst  measurements.inc  overview.inc  references.rst  results.rst  spin.rst  topics.rst  z.references.rst
src/theory/topics/: cqm.rst  quark-model.rst  sm.rst
tests/: .gitignore  test_github.py  test_project_inventory.py  test_repo.py
tests/repo/: test_github.py  test_gitlab.py  test_repo.py
tutorials/: documentation.rst  git.rst  testing.rst  tips.rst
tutorials/git/: branching.rst  commit.rst
