[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = ["Programming Language :: Python :: 3.13"]
dependencies = [
    "PyGithub",
    "PyYAML",
    "attrs",
    "pydantic >=2",
    "python-dateutil",
    "python-gitlab",
]
description = "A central knowledge-base for Partial Wave Analysis"
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "particles",
    "physics",
]
license = {file = "LICENSE"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "pwa-pages"
requires-python = "~=3.13.0"
version = "0.0.0"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.scripts]
export-json-schema = "pwa_pages.project_inventory:export_json_schema"

[project.urls]
Changelog = "https://github.com/ComPWA/PWA-pages/releases"
Documentation = "https://pwa.rtfd.io"
Source = "https://github.com/ComPWA/PWA-pages"
Tracker = "https://github.com/ComPWA/PWA-pages/issues"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "doc"},
    {include-group = "style"},
    {include-group = "test"},
]
doc = [
    "jupyter-cache",
    "quarto-cli",
    {include-group = "notebooks"},
]
notebooks = [
    "feynman",
    "matplotlib",
    "sympy",
]
style = [
    "ty",
    {include-group = "types"},
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
types = [
    "pytest",
    "types-PyYAML",
    "types-python-dateutil",
]

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pwa_pages = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "cov",
    "doc",
    "linkcheck",
    "style",
    "test-all",
]

[tool.poe.tasks.cov]
cmd = """
pytest \
    --cov=pwa_pages \
    --cov-fail-under=90 \
    --cov-report=html \
    --cov-report=xml \
    --numprocesses=auto \
    ${paths}
"""
executor = {group = "test"}
help = "Compute how much of the source code is covered by tests"

[[tool.poe.tasks.cov.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.doc]
cmd = "quarto render docs --no-clean"
executor = {group = "doc"}
help = "Build documentation and API"

[tool.poe.tasks.doclive]
cmd = "quarto preview docs --no-clean"
executor = {group = "doc"}
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.tasks.linkcheck]
cmd = """
python -c 'print("Not yet implemented, see https://github.com/quarto-dev/quarto-cli/issues/1319")',
"""
executor = {group = "style"}
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = {group = "style"}
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.test]
cmd = "pytest --numprocesses=auto ${paths}"
executor = {group = "test"}
help = "Run all unit tests"

[[tool.poe.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-all]
cmd = """
pytest \
    -m 'slow or not slow' \
    --numprocesses=auto
"""
executor = {group = "test"}
help = "Run all tests"

[tool.pytest]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore=docs/conf.py",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore:Argument login_or_token is deprecated.*:DeprecationWarning",
    "ignore:Exception ignored in.*:UserWarning",
    "ignore:There is no current event loop:DeprecationWarning",
]
minversion = "9.0"
testpaths = [
    "src",
    "tests",
]

[tool.ruff]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "INP001",
    "S101",
    "S113",
]
"src/pwa_pages/project_inventory.py" = [
    "FA100",
    "UP00",
]
"tests/*" = [
    "ANN",
    "D",
    "FBT001",
    "INP001",
    "PLC2701",
    "PLR0913",
    "PLR2004",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
