[project]
name = "pwa-pages"
version = "0.0.0"
description = "A central knowledge-base for Partial Wave Analysis"
requires-python = "~=3.13.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de" }]
maintainers = [{ email = "compwa-admin@ep1.rub.de" }]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "particles",
    "physics",
]
classifiers = ["Programming Language :: Python :: 3.13"]
dependencies = [
    "PyGithub",
    "PyYAML",
    "attrs",
    "pydantic>=2.13.4",
    "python-dateutil",
    "python-gitlab",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Changelog = "https://github.com/ComPWA/PWA-pages/releases"
Documentation = "https://pwa.rtfd.io"
Issues = "https://github.com/ComPWA/PWA-pages/issues"
Source = "https://github.com/ComPWA/PWA-pages"

[project.scripts]
export-json-schema = "pwa_pages.project_inventory:export_json_schema"

[dependency-groups]
dev = [
    "ruff",
    { include-group = "doc" },
    { include-group = "style" },
    { include-group = "test" },
]
doc = [
    "jupyter-cache",
    "quarto-cli",
    { include-group = "notebooks" },
]
notebooks = [
    "feynman",
    "matplotlib",
    "sympy",
]
style = [
    "ty",
    { include-group = "types" },
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
types = [
    "pytest",
    "types-PyYAML",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.compwa.policy]
repo-name = "PWA-pages"
repo-title = "PWA Pages"

[tool.compwa.policy.github]
ci-skipped-tests = "all"
macos-python-version = "disable"
no-cd = true
no-pypi = true

[tool.compwa.policy.python]
type-checker = ["ty"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.groups.doc]
heading = "Documentation"

[tool.poe.groups.doc.tasks.doc]
cmd = "quarto render docs --no-clean"
executor = { group = "doc" }
help = "Build documentation and API"

[tool.poe.groups.doc.tasks.doclive]
cmd = "quarto preview docs --no-clean"
executor = { group = "doc" }
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.groups.doc.tasks.linkcheck]
cmd = """
python -c 'print("Not yet implemented, see https://github.com/quarto-dev/quarto-cli/issues/1319")',
"""
executor = { group = "style" }
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.groups.test]
heading = "Testing"

[tool.poe.groups.test.tasks.cov]
cmd = """
pytest \
    --cov=pwa_pages \
    --cov-fail-under=90 \
    --cov-report=html \
    --cov-report=xml \
    --numprocesses=auto \
    ${paths}
"""
executor = { group = "test" }
help = "Compute how much of the source code is covered by tests"

[[tool.poe.groups.test.tasks.cov.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test]
cmd = "pytest --numprocesses=auto ${paths}"
executor = { group = "test" }
help = "Run all unit tests"

[[tool.poe.groups.test.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.groups.test.tasks.test-all]
cmd = """
pytest \
    -m 'slow or not slow' \
    --numprocesses=auto
"""
executor = { group = "test" }
help = "Run all tests"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "style",
    "linkcheck",
    "doc",
    "cov",
    "test-all",
]

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = { group = "style" }
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.upgrade]
executor = { type = "simple" }
help = "Upgrade lock files"
parallel = ["_upgrade-precommit", "_upgrade-uv"]

[tool.poe.tasks._upgrade-precommit]
cmd = "pre-commit autoupdate -j8"
executor = { type = "simple" }

[tool.poe.tasks._upgrade-uv]
cmd = "uv lock --upgrade"
executor = { type = "simple" }

[tool.pytest]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore=docs/conf.py",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore:Argument login_or_token is deprecated.*:DeprecationWarning",
    "ignore:Exception ignored in.*:UserWarning",
    "ignore:There is no current event loop:DeprecationWarning",
]
minversion = "9.0"
testpaths = ["src", "tests"]

[tool.ruff]
preview = true
show-fixes = true
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"docs/*" = [
    "INP001",
    "S101",
    "S113",
]
"src/pwa_pages/project_inventory.py" = [
    "FA100",
    "UP00",
]
"tests/*" = [
    "ANN",
    "D",
    "FBT001",
    "INP001",
    "PLC2701",
    "PLR0913",
    "PLR2004",
    "PLR6301",
    "RUF069",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.setuptools.package-data]
pwa_pages = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.tombi.files]
exclude = ["**/uv.lock"]

[tool.tombi.format.rules]
indent-width = 4
line-width = 88

[tool.tombi.lint.rules]
key-empty = "off"

[[tool.tombi.schemas]]
root = "tool.compwa.policy"
path = "https://raw.githubusercontent.com/ComPWA/policy/0.9.0/compwa-policy.schema.json"
include = ["pyproject.toml"]

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
