[metadata]
name = PWA-pages
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/PWA-pages/issues
    Changelog = https://github.com/ComPWA/PWA-pages/releases
    Documentation = https://pwa.rtfd.io
    Source = https://github.com/ComPWA/PWA-pages
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6, <3.10
setup_requires =
    setuptools_scm
install_requires =
    feynman
    matplotlib
    numpy
packages = find:
package_dir =
    =src

[options.extras_require]
doc =
    dataclasses; python_version < '3.7'
    graphviz
    ipywidgets
    jupyter
    myst-nb >= 0.11  # myst_enable_extensions
    Sphinx >= 3
    sphinx-book-theme
    sphinx-copybutton
    sphinx-math-dollar
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >= 2.2  # bibtex_reference_style
    sphinxcontrib-hep-pdgref
    sympy
format =
    black
    isort
sty =
    %(format)s
    pre-commit >= 1.4.0
dev =
    %(doc)s
    %(sty)s
    jupyterlab
    jupyterlab-code-formatter
    pip-tools >= 6.1.0  # for extras_require
    sphinx-autobuild
    tox >= 1.9  # for skip_install, use_develop

[options.packages.find]
where = src
