[metadata]
name = PWA-pages
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = A central knowledge-base for Partial Wave Analysis
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/PWA-pages/issues
    Changelog = https://github.com/ComPWA/PWA-pages/releases
    Documentation = https://pwa.rtfd.io
    Source = https://github.com/ComPWA/PWA-pages
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    PyGithub
    python-dateutil
packages = find:
package_dir =
    =src

[options.extras_require]
doc =
    dataclasses; python_version <'3.7'
    feynman
    ipywidgets
    jupyter
    matplotlib
    myst-nb >=0.11  # myst_enable_extensions
    pytablewriter[html]
    Sphinx >=3
    sphinx-book-theme
    sphinx-copybutton
    sphinx-math-dollar
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
    sphinxcontrib-hep-pdgref
    sympy
test =
    pytest
    pytest-cov
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
mypy =
    mypy >=0.730  # error code support
    types-docutils
    types-pkg-resources
    types-python-dateutil
    types-setuptools
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(sty)s
    %(test)s
    jupyterlab
    jupyterlab-code-formatter
    pip-tools >=6.1.0  # for extras_require
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
pwa_pages =
    py.typed
