[metadata]
name = PWA-pages
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = A central knowledge-base for Partial Wave Analysis
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/PWA-pages/issues
    Changelog = https://github.com/ComPWA/PWA-pages/releases
    Documentation = https://pwa.rtfd.io
    Source = https://github.com/ComPWA/PWA-pages
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    attrs >=17.3.0  # auto_attribs
    pydantic
    PyGithub
    pytablewriter[html]
    python-dateutil
    python-gitlab
    PyYAML
packages = find:
package_dir =
    =src

[options.extras_require]
doc =
    docutils <0.18  # https://github.com/executablebooks/jupyter-book/issues/2026#issuecomment-1636657741
    feynman
    importlib-metadata; python_version <"3.8.0"
    ipywidgets
    jupyter
    matplotlib
    myst-nb >=0.11  # myst_enable_extensions
    numpy <1.24  # bug in feynman: https://github.com/ComPWA/PWA-pages/actions/runs/3868808372/jobs/6594501436#step:6:177
    Sphinx >=3
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-comments
    sphinx-copybutton
    sphinx-design
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
    sphinxcontrib-hep-pdgref
    sympy
test =
    pytest
    pytest-cov
    pytest-xdist
format =
    black
mypy =
    mypy >=0.730  # error code support
    types-docutils
    types-pkg-resources
    types-python-dateutil
    types-PyYAML
    types-setuptools
lint =
    %(mypy)s
    ruff
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
jupyter =
    %(doc)s
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-lsp
    jupyterlab-myst
    python-lsp-server[rope]
    ypy-websocket <0.8.3; python_version <"3.8.0"
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.entry_points]
console_scripts =
    export-json-schema = pwa_pages.project_inventory:export_json_schema

[options.packages.find]
where = src

[options.package_data]
pwa_pages =
    py.typed
